# goit-pythonweb-hw-01

./: .gitignore  README.md  pyproject.toml  task_1.py  task_2.py
